# TRAFFIC

./: .env.example  .gitignore  Dockerfile  README.md  dev-stop.ps1  dev.ps1  docker-compose.prosumer.yml  docker-compose.yml  pyproject.toml
frontend/src/: App.tsx
frontend/src/api/: cameras.ts  mapData.ts  metrics.ts  predictions.ts
frontend/src/components/ui/: SegmentMap.tsx  Sidebar.tsx
frontend/src/data/: mock.ts
frontend/src/hooks/: useCameras.ts  useMapData.ts  useMetrics.ts  usePredictions.ts
frontend/src/pages/: Cameras.tsx  Dashboard.tsx  MapView.tsx  Predictions.tsx  RiskAnalysis.tsx  Settings.tsx
scripts/: init_db.sql  seed_demo_data.py  train_congestion_model.py  train_risk_model.py
src/traffic_ai/: __init__.py  celery_app.py  config.py  main.py
src/traffic_ai/analytics/: baseline.py  risk_scorer.py  risk_scorer_ml.py
src/traffic_ai/api/: auth.py  deps.py
src/traffic_ai/api/routes/: assets.py  auth.py  cameras.py  export.py  health.py  map_data.py  metrics.py  predictions.py  risk.py  segments.py  tickets.py  users.py
src/traffic_ai/db/: database.py  influx.py  redis_client.py
src/traffic_ai/ingestors/: barcelona.py  base.py  camera.py  dgt_cameras.py  dgt_incidents.py  loop_detector.py  madrid_cameras.py  madrid_traffic_state.py  tomtom.py  weather.py
src/traffic_ai/ml/: __init__.py  congestion_model.py  vehicle_detector.py
src/traffic_ai/models/: orm.py  schemas.py
src/traffic_ai/tasks/: camera_tasks.py  risk_tasks.py  sensor_tasks.py  weather_tasks.py
tests/: conftest.py
tests/unit/: test_alert_engine.py  test_api_health.py  test_baseline.py  test_config.py  test_ingestors.py  test_risk_scorer.py  test_throttle.py
