[project]
name = "traffic-ai"
version = "0.1.0"
description = "Hardware-adaptive intelligent transportation system"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "flower",
    "influxdb-client[async]>=1.40",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "psutil",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pydantic>=2.5",
    "pydantic-settings",
    "geoalchemy2>=0.14",
    "shapely>=2.0",
    "numpy",
    "pandas",
    "onnxruntime",
    "psycopg2-binary",
    "slowapi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "aiosqlite",
    "ruff",
]
ml = [
    # Inference (runtime)
    "onnxruntime",         # ONNX RT — MIT
    "Pillow",              # JPEG decode for vehicle detector
    # Training scripts only (not needed at runtime)
    "torch",               # LSTM training
    "onnx",                # ONNX export
    "xgboost",             # Risk scorer training + inference
    "scikit-learn",        # train/val split, preprocessing
    "statsmodels",         # STL seasonal decomposition
    "requests",            # historical data download in training scripts
    "shap",                # SHAP explanations (optional)
]
s3 = [
    "boto3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle + pyflakes + isort
ignore = ["E501"]                # line length enforced by formatter, not linter
